--- a/misradiya.css
+++ b/misradiya.css
@@ -1,42 +1,3 @@
-.step2-tab {
-    display: none;
-}
-.step2-active-tab {
-    display: block;
-}
-.step2-tab-h {
-    display: inline-block;
-    background: white;
-    padding: 10px;
-    border: 1px #d01d21 solid;
-    border-bottom: none;
-    border-radius: 5px 5px 0 0;
-    margin-left: 3px;
-    text-align: center;
-    color: #d01d21;
-}
-.step2-tab-h.active {
-    background: #d01d21;
-    color: white;
-}
-.cart-table.cart-table-checkout {
-    height: 285px;
-    overflow-y: scroll;
-}
-@media (min-width: 768px){
-	tr.cart-row {
-		width: 50%;
-		display: inline-block;
-		border-right: 1px solid #ececec;
-	}
-	.checkout-container .order-summary {
-		max-width: 100%;
-	}
-}
-tr.cart-row {
-    height: 130px;
-    max-height: 130px;
-    min-height: 130px;
-    overflow: hidden;
-    border-bottom: 1px solid #ececec;
+.thumbnail.thumbnail-product {
+    border: 1px solid #f3eded;
 }
